<resources>

    <string name="app_name">Food Nutrient Fact</string>
    <string name="save_successfully">Save Data Successfully.</string>
    <string name="save_fail">Save To Data Failed.</string>
    <string name="cart_empty">Your cart is empty.</string>
    <string name="required_empty_text">Please Fill All The Required Fields.</string>
    <string name="update_calorie_setting">Update Calorie Setting Successfully.</string>
    <string name="add_food_title">Add food.</string>
    <string name="added_to_cart">Added to cart.</string>
    <string name="cannot_add_to_cart">Can not add to cart.</string>
    <string name="food_exists">Food already exists.</string>
    <string name="unable_detect_image">Unable to detect the image.</string>
    <string name="error_title">Error</string>
    <string name="detect_labeler_cannot_null">Detect Image Labeler cannot be null.</string>
    <string name="food_nutri" translatable="false">foodNutri</string>
    <string name="analyzing_dialog">Analyzing the object...</string>
    <string name="not_found_food">Not Found Food.</string>
    <string name="engine_must_be_specified" translatable="false">Engine must be specified.</string>
    <string name="current">Current</string>
    <string name="calorie_missing">Missing</string>
    <string name="calorie_redundancy">Redundancy</string>
    <string name="pie_chart_des">Pie Chart Calorie</string>
    <string name="pie_chart_title">Calorie Comparision Chart</string>
    <string name="require_enter_calorie_setting">Please Enter Your Calorie Setting.</string>
    <string name="confirm_dialog_title">Confirm dialog !</string>
    <string name="confirm_dialog_content"> Do you really want to delete ?</string>
    <string name="confirm_dialog_update_calsetting_content">You have entered calorie setting today.\n Do you really want to update calorie setting ?</string>
    <string name="calorie_daily_intent" translatable="false">CalorieDaily</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="update_user">Update Your Information Successfully.</string>
    <string name="require_edit_user">Please enter your information.</string>
    <string name="user_profile_setting">Your Profile Setting</string>
    <string name="user_name">Name:&#160;</string>
    <string name="user_height">Height:&#160;</string>
    <string name="user_weight">Weight:&#160;</string>
    <string name="save">Save</string>
    <string name="calorie_setting" translatable="false">CALORIE SETTING</string>
    <string name="detect_main_activity">DETECT</string>
    <string name="welcome">Welcome</string>
    <string name="edit_user">Edit</string>
    <string name="total">Total:&#160;</string>
    <string name="date">Date:&#160;</string>
    <string name="total_cal_daily">Total Calorie Daily:&#160;</string>
    <string name="total_cal_setting">Total Calorie Setting:&#160;</string>
    <string name="Kcal" translatable="false">&#160;KCal</string>
    <string name="cm" translatable="false">cm</string>
    <string name="kg" translatable="false">kg</string>
    <string name="g" translatable="false">g</string>
    <string name="mg" translatable="false">mg</string>
    <string name="IU" translatable="false">IU</string>
    <string name="Calorie" translatable="false">Calorie:&#160;</string>
    <string name="user_daily_calories_setting"> User daily calories setting</string>
    <string name="detect_activity">DETECT</string>
    <string name="food_weight">Food Weight:&#160;</string>
    <string name="add_to_cart"> Add to cart</string>
    <string name="Cancel">Cancel</string>
    <string name="Add">Add</string>
    <string name="my_profile">My Profile</string>
    <string name="detect_again">DETECT AGAIN</string>
    <string name="hold_phone">Please hold your phone still.</string>
    <string name="Language">Language</string>
    <string name="setting_language">Choose Language</string>
    <string name="Vietnamese">Tiếng Việt</string>
    <string name="English">English</string>
    <string name="change_language">Change</string>
    <string name="url_web_view" translatable="false">https://www.cooky.vn</string>
    <string name="language" translatable="false">language</string>
    <string name="vi" translatable="false">vi</string>
    <string name="en" translatable="false">en</string>
    <string name="My_Lang" translatable="false">My_Lang</string>
    <string name="cooking_recipe">Cooking Recipe Website</string>
    <string name="guide_detect">Click the red box to display the calorie of the corresponding food</string>
    <string name="CAPTURE_ERROR">Could not capture photo</string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="gender">Gender:&#160;</string>
    <string name="age">Age:&#160;</string>
    <string name="age_range">&#160;ages 15 - 80</string>
    <string name="error_age">Age Range must be 15-80</string>
    <string name="scan_mode_title">Setting Scan Mode</string>
    <string name="setting_result_mode">Choose Mode</string>
    <string name="single_result_mode">Single Mode</string>
    <string name="multi_result_mode">Multiple Mode</string>
    <string name="resultmode" translatable="false">ResultMode</string>
    <string name="scanmode" translatable="false">ScanMode</string>
    <string name="single" translatable="false">single</string>
    <string name="multi" translatable="false">multiple</string>
    <string name="My_Mode" translatable="false">My_Mode</string>
    <string name="My_Scan_Mode" translatable="false">My_Scan_Mode</string>
    <string name="result_mode_title_single">Number Of Result: Single</string>
    <string name="result_mode_title_mult">Number Of Result: Multiple</string>
    <string name="scan_mode_photo" >Scan Mode: Photo</string>
    <string name="scan_mode_realtime" >Scan Mode: Reatime</string>
    <string name="photo" translatable="false">photo</string>
    <string name="reatime" translatable="false">reatime</string>
    <string name="dialog_mult_result_title">Choose Food</string>
    <string name="number_of_date_title" >Choose a number of day: </string>
    <string name="name_model_own_train" translatable="false">model_train_food</string>
    <string name="statisticdto" translatable="false">statisticdto</string>
    <string name="excess_calories">Excess calories:&#160; </string>
    <string name="detail_button" >Detail</string>
    <string name="one_Day">1 Day</string>
    <string name="three_Day">3 Day</string>
    <string name="seven_Day">7 Day</string>
    <string-array name="number_of_date_arrays">
        <item>1 Day</item>
        <item>3 Day</item>
        <item>7 Day</item>
    </string-array>
</resources>