<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/bg_rest"
    tools:context=".activity.SettingLanguageActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/setting_language"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <RadioGroup
            android:id="@+id/radioLang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/radioVn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Vietnamese"
                android:checked="true" />

            <RadioButton
                android:id="@+id/radioEn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/English" />

        </RadioGroup>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:id="@+id/btnChange"
        android:gravity="center"
        android:background="@drawable/buttons"
        android:layout_below = "@+id/editText"
        android:layout_toLeftOf="@+id/textview"
        android:layout_toStartOf="@+id/textview"
        android:layout_centerHorizontal="true"/>

</LinearLayout>
