<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
    xmlns:tools = "http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height = "match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.SettingLanguageActivity">

    <TextView
        android:id="@+id/textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/setting_result_mode"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="250dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Switch
                android:id="@+id/switchOnOffResultMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:text="@string/result_mode_title_single"
                android:textOff="Off"
                android:textOn="On"  />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:gravity="center"
        android:layout_marginBottom="20dp">
        <RelativeLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <Switch
                android:id="@+id/switchOnOffScanMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_alignParentRight="true"
                android:checked="false"
                android:text="@string/scan_mode_photo"
                android:textOff="Off"
                android:textOn="On"  />
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:id="@+id/btnChange"
        android:gravity="center"
        android:background="@drawable/buttons"
        android:layout_below = "@+id/editText"
        android:layout_toLeftOf="@+id/textview"
        android:layout_toStartOf="@+id/textview"
        android:layout_centerHorizontal="true"/>

</LinearLayout>