<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/pieChartTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/number_of_date_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/number_of_date_title"/>
            <Spinner
            android:id="@+id/spinnerNumberOfDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/number_of_date_arrays"
            android:prompt="@string/number_of_date_title" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/calSettingLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/total_cal_setting"/>
            <TextView
                android:id="@+id/txtCalSetting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/Kcal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/detailBtn"
                android:layout_width="70dp"
                android:layout_height="35dp"
                android:textSize="12dp"
                android:text="@string/detail_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/calRedundancy"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/excess_calories"/>
            <TextView
                android:id="@+id/txtcalRedundancy"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/excessCaloriesLabelUnit"
                android:textColor="@color/red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=" %"/>
        </LinearLayout>
    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/pieChartCal"
        android:layout_marginLeft="10dp"
        android:layout_width="380dp"
        android:layout_height="370dp"
        android:layout_weight=".5"
        >
    </com.github.mikephil.charting.charts.PieChart>

</LinearLayout>