<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="wrap_content"

    android:orientation="vertical"
    android:layout_gravity="center">
<LinearLayout
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:background="@drawable/border"
    android:orientation="vertical">
    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:includeFontPadding="false"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="Nutrition Facts"
        android:textColor="#330033"
        android:textSize="22sp"
        android:typeface="serif"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtFoodName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:typeface="serif"
        android:paddingBottom="5dp"
        android:text="Food Name"
        android:textColor="#330033"
        android:textSize="18sp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="41dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtLabelAmount"
            android:layout_width="129dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Amount Per"
            android:textColor="#330033"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/txtAmount"
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="100 grams"
            android:typeface="serif"
            android:textColor="#330033"
            android:textSize="18sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCalLabel"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Calories"
            android:typeface="serif"
            android:textColor="#330033"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCal"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="165"
            android:textColor="#330033"
            android:textSize="18sp"
            android:typeface="serif" />
        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/Kcal"
            android:typeface="serif"
            android:textColor="#330033"
            android:textSize="18sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtProteinLabel"
            android:layout_width="93dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Protein"
            android:textColor="#330033"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/txtProtein"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="85"
            android:textColor="#330033"
            android:textSize="18sp"
            android:typeface="serif" />
        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g"
            android:typeface="serif"
            android:textColor="#330033"
            android:textSize="18sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtCholesterolLabel"
            android:layout_width="124dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Cholesterol"
            android:textColor="#330033"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:id="@+id/txtCholesterol"
            android:layout_width="135dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="85"
            android:textColor="#330033"
            android:textSize="18sp"
            android:typeface="serif" />

        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/mg"
            android:textColor="#330033"
            android:textSize="18sp"
            android:typeface="serif" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTotalFatLabel"
            android:layout_width="103dp"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:text="Total Fat"
            android:typeface="serif"
            android:textColor="#330033"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtTotalFat"
            android:layout_width="142dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="3.6"
            android:textColor="#330033"
            android:textSize="18sp"
            android:typeface="serif" />
        <TextView
            android:layout_width="211dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/g"
            android:typeface="serif"
            android:textColor="#330033"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>

    <Button
        android:id="@+id/btnAdd"
        android:layout_gravity="center"
        android:background="@drawable/buttons"
        android:layout_width="240dp"
        android:layout_height="28dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="5dp"
        android:typeface="normal"
        android:textColor="#330033"
        android:text="@string/Add"/>


</LinearLayout>